--- a/Python/Dictionary/Collection_Types_ALL.ipynb
+++ b/Python/Dictionary/Collection_Types_ALL.ipynb
@@ -707,7 +707,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<list_reverseiterator object at 0x7ff53d524128>\n"
+      "<list_reverseiterator object at 0x7f49ad2384e0>\n"
      ]
     }
    ],
@@ -776,7 +776,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<list_reverseiterator object at 0x7ff53d562f28>\n"
+      "<list_reverseiterator object at 0x7f49ad2a55c0>\n"
      ]
     }
    ],
@@ -1414,7 +1414,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'cat', 'goldfish', 'dog', 'canary'}\n"
+      "{'dog', 'goldfish', 'canary', 'cat'}\n"
      ]
     }
    ],
@@ -1534,7 +1534,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'cat', 'goldfish', 'dog', 'canary'}\n"
+      "{'dog', 'goldfish', 'canary', 'cat'}\n"
      ]
     }
    ],
@@ -1935,7 +1935,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 148,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1947,20 +1947,144 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 165,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "numbers={\n",
+    "    \"Jane Doe\":\"27-555-5367\",\n",
+    "    \"John Smith\":\"27-555-6254\",\n",
+    "    \"Bob stone\":\"27-555-5689\"\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 166,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "hello\n"
+      "{'Jane Doe': '27-555-5367', 'John Smith': '27-555-6254', 'Bob stone': '27-555-5689'}\n"
      ]
     }
    ],
    "source": [
-    "hello=\"hello\"\n",
-    "print(hello)"
+    "print(numbers)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 167,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "numbers[\"Jane Doe\"]=27-555-1024"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 168,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "numbers[\"Anna Copper\"]=\"27-555-3237\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 169,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "27-555-3237\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(numbers[\"Anna Copper\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 170,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Jane Doe': -1552, 'John Smith': '27-555-6254', 'Bob stone': '27-555-5689', 'Anna Copper': '27-555-3237'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(numbers)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 172,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "27-555-5689\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(numbers[\"Bob stone\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 174,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dict_keys(['Jane Doe', 'John Smith', 'Bob stone', 'Anna Copper'])\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(numbers.keys())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 175,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# and kids that how you print all the keys in an instant coolcool"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 176,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Jane Doe': -1552, 'John Smith': '27-555-6254', 'Bob stone': '27-555-5689', 'Anna Copper': '27-555-3237'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(numbers)"
    ]
   },
   {
@@ -1969,6 +2093,674 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 178,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# now lets talk about implicit conversions and explicit conversions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 179,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "animals=['cat','dog','goldfish','canary','cat']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 180,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "animals_set=set(animals)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 181,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "animals_unique_list=list(animals_set)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 183,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "animals_unique_tuple=tuple(animals_unique_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 184,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# these were kinda obvious but what about when you wanna do it with dictioary"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 207,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "marbles = {\n",
+    "    \"red\": 34,\n",
+    "    \"green\": 30,\n",
+    "    \"brown\": 31,\n",
+    "    \"yellow\": 29\n",
+    "}\n",
+    "# so here is a quite intresting insight \n",
+    "# is you use dict_name.valuse()  -->it will return the values in green\n",
+    "# but if you use dict_name.items() --> it will return the key values and the value\n",
+    "# in green as a combo\n",
+    "# and the default behaviour is the just the keys \n",
+    "# and you could use all the types of collection type"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 208,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "colours=list(marbles)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 209,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['red', 'green', 'brown', 'yellow']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(colours)#now in this notice that the keys were used as a default"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 210,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "counts=tuple(marbles.values())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 211,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(34, 30, 31, 29)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(counts)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 212,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "marble_set=list(marbles.items())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 213,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('red', 34), ('green', 30), ('brown', 31), ('yellow', 29)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(marble_set)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 215,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# dict([1,2,3,4,5]) this will not work if you wanna convert this\n",
+    "# into a dict but\n",
+    "# dict([(1,2),(3,4)]) this you can convert into a dictionary "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 216,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# now another look at strings"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 217,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# now its time to learn something about string manupulation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 218,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s=\"Aman Sharma is super cool and is a great Programer\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 219,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "50\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(len(s))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 220,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(s.index(\"a\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 221,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "13\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(s.index(\"s\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 222,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# remember that the strings are immutable and so you know what that means right future me:\n",
+    "# so immutable collection types are the types which can not be changed ie if you wanna make \n",
+    "# some changes in the immutable collection type you need to make an entire collection type again\n",
+    "# this isn't a prob in small list but in large list it can be quite demanding"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 224,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# now this will give us an error\n",
+    "# s[0]=\"b\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 225,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# also remember that membership operator has special behaviour when applied tos strings"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 226,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('a' in 'abcd')#this is quite typical nothing special here"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 228,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('ab' in 'abcd')#same nothing special here"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 229,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "# THIS IS IMPORTANT\n",
+    "# now here is something to remember thiswill not work in lists\n",
+    "print(['a','b'] in ['a','b','c','d'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 230,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# now how to deal with this you can convert stings to list \n",
+    "# abs_list=list(\"Hello boi this will be a list soon enough\")\n",
+    "# now if we could do that then we should be able to do the reverse also\n",
+    "# so this is how we do that"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 247,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=['a','b']\n",
+    "b=['a','b','c','d']\n",
+    "print(a in b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 248,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# so now we will change it into a string"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 249,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a=\"\".join(a)\n",
+    "b=\"\".join(b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 250,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(a in b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 243,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# now about this join operator\n",
+    "\n",
+    "# what you chould put in the between the list elements.join(List)\n",
+    "\n",
+    "# so this is how we deal with this"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 251,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# now that you did that you could also seperate this with the help of \n",
+    "# split "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 252,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "animals=('cat','dog','fish')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 253,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cat dog fish\n",
+      "cat,dog,fish\n",
+      "cat--dog--fish\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\" \".join(animals))\n",
+    "# this will add a space in between all the elements of the list\n",
+    "print(\",\".join(animals))\n",
+    "# this will add a comma in bw\n",
+    "print(\"--\".join(animals))\n",
+    "# this will add this two dashes in bw"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 256,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Execise 6\n",
+    "list1=[1,1,2,3,3,]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 258,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 1, 2, 3, 3)\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=tuple(list1)\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 259,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a=list(b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 260,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(len(a))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 261,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "c=set(b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 262,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(len(c))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 263,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "d=list(c)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 265,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(len(d))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 269,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "e=list(range(1,11))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 270,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(e)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 277,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dictionary={\n",
+    "    1:1,\n",
+    "    2:2,\n",
+    "    3:3,\n",
+    "    4:4,\n",
+    "    5:5,\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 278,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1: 1, 2: 2, 3: 3, 4: 4, 5: 5}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(dictionary)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 279,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "e=list(dictionary)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 280,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(e)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "v=list(dictionary.)"
+   ]
   }
  ],
  "metadata": {
