--- a/Python/File_Manipulation/File.ipynb
+++ b/Python/File_Manipulation/File.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,11 +11,132 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "file=open('aman.txt','w')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "36"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "file.write(\"Hello boi this is my example program\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file =open('aman.txt','w')\n",
+    "file.write(\"i don't know if this wilr this will overwite hello bou\")\n",
+    "file.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ok so chenges ko save karne ke liye usko close karna pdta hei"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# so r is for reading mode \n",
+    "# and w is for writing mode \n",
+    "# and a is for appending\n",
+    "# and finally r+ is for both reading and writing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file = open('aman.txt','w')\n",
+    "file.write(\"hello world\\n\")\n",
+    "file.write(\"hello world\\n\")\n",
+    "file.write(\"hello world\\n\")\n",
+    "\n",
+    "file.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello world\n",
+      "\n",
+      "hello world\n",
+      "\n",
+      "hello world\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# if you are making a new file it will create it and if the file name is present then it will just use that instead\n",
+    "file=open('aman.txt','r')\n",
+    "for each in file:\n",
+    "    print(each)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello world\n",
+      "hello world\n",
+      "hello world\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "file=open('aman.txt','r')\n",
+    "print(file.read())"
    ]
   },
   {
@@ -26,7 +147,7 @@
     {
      "data": {
       "text/plain": [
-       "36"
+       "38"
       ]
      },
      "execution_count": 45,
@@ -35,7 +156,9 @@
     }
    ],
    "source": [
-    "file.write(\"Hello boi this is my example program\")\n"
+    "file=open('geek.txt','w')\n",
+    "file.write('Hello boi this is text\\n')\n",
+    "file.write('THis is the second command so whats up')"
    ]
   },
   {
@@ -49,34 +172,178 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
-    "file =open('aman.txt','w')\n",
-    "file.write(\"i don't know if this will append or this will overwite\")\n",
-    "file.close()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 50,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# ok so chenges ko save karne ke liye usko close karna pdta hei"
+    "file=open('geek.txt','r')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 52,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello boi this is text\n",
+      "THis is the second command so whats up\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(file.read())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# so r is for reading mode \n",
-    "# and w is for writing mode \n",
-    "# and a is for appending\n",
-    "# and finally r+ is for both reading and writing"
+    "file.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# now lets see how to use append "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "32"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "file=open('geek.txt','a')\n",
+    "file.write(\"\\nthis will add this line whatup\\n\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello boi this is text\n",
+      "THis is the second command so whats up\n",
+      "this will add this line whatup\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "file=open('geek.txt','r')\n",
+    "print(file.read())\n",
+    "file.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# now using with function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello boi th\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open(\"geek.txt\") as file:\n",
+    "    data=file.read(12)\n",
+    "print(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# now how to use split function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Hello boi this is text\\n']\n",
+      "['THis is the second command so whats up\\n']\n",
+      "['this will add this line whatup\\n']\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open(\"geek.txt\") as file:\n",
+    "    data=file.readlines()\n",
+    "#     print(data)\n",
+    "    for line in data:\n",
+    "        word=line.split(\"/n\")\n",
+    "        print(word)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# and thats how we use split function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# and thats it for the files in python BY"
    ]
   },
   {
@@ -84,10 +351,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "file = open('aman.txt',)\n",
-    "\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
